--- a/html/index.html
+++ b/html/index.html
@@ -8,23 +8,24 @@
 </head>
 <body>
     <header>
-        <h1><i>LOJA DBR</i></h1>
+        <h1 style="background-color: aqua; text-align: center"><i>LOJA DBR</i></h1><br>
         <button id="cartButton">Carrinho</button>
         <br>
+        <h2>Produtos com melhor preço!!!</h2>
     </header>
     
     <section id="products">
         <div class="product" data-id="1">
-            <img src="product1.jpg" alt="Produto 1">
-            <h3>Produto 1</h3>
-            <p>Descrição do Produto 1.</p>
+          Sua loja virtual!!! <img src="../img/C.jpg" alt="Yeloow ts">
+            <h3>NiviForce</h3>
+            <p>Relogio de alta qualidade e durabilidade.</p>
             <p class="price">$20.00</p>
             <button class="add-to-cart">Adicionar ao Carrinho</button>
         </div>
         
         <div class="product" data-id="2">
-            <img src="product2.jpg" alt="Produto 2">
-            <h3>Produto 2</h3>
+         <back-ground><img src="../img/ab.jpg" alt="produto.1"></back-ground>
+            <h3>Yelow ts</h3>
             <p>Descrição do Produto 2.</p>
             <p class="price">$30.00</p>
             <button class="add-to-cart">Adicionar ao Carrinho</button>
