--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
     <h1 style="background-color: blue;
     font-size: 80px;
-    text-align: center;padding-top: 10%;
+    text-align: center;border:5px solid;
+   margin-top: -2px;
     ">LOJA DBR</h1><br>
     <button id="cartButton">Carrinho</button>
 <body>
